--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node main",
+    "start": "node src/index.js",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "author": "",
