--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^2.28.0",
     "jwt-decode": "^3.1.2",
     "qs": "^6.10.3",
+    "quill": "^1.3.6",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.1.0",
     "react-datepicker": "^4.7.0",
