--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.26.1",
     "chart.js": "^3.7.1",
     "date-fns": "^2.28.0",
+    "html-react-parser": "^1.4.12",
     "jwt-decode": "^3.1.2",
     "qs": "^6.10.3",
     "quill": "^1.3.6",
@@ -27,6 +28,7 @@
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "sanitize-html": "^2.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
